# zc

./: .gitignore  Cargo.toml  README.md  install.py  zc.bash  zc.fish  zc.zsh
src/: data.rs  main.rs  matcher.rs
