[package]
name = "zc"
version = "0.1.0"
authors = ["wuyaoping <jamykp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
dirs = "3.0.1"
getopts = "0.2.21"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }

[profile.release]
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.dev]
debug = 0
