[package]
name = "zc"
version = "1.0.0"
authors = ["wuyaoping <jamykp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dirs = "3.0.2"
getopts = "0.2.21"
once_cell = "1.10.0"
regex = "1.5.4"

[profile.release]
lto = "thin"
panic = "abort"
strip = "debuginfo"
codegen-units = 1

[profile.dev]
debug = 0
